--- a/util/__doc.html
+++ b/util/__doc.html
@@ -2176,7 +2176,7 @@ checking gl.VALIDATE_STATUS and obtaining gl.GetProgramInfoLog().
 
     <span class="comment">//	The names of the Programs in this ProgramManager.</span>
     <span class="comment">//	The MakeProgramsFromRawSources() method uses this to populate the Programs hash-table</span>
-    <span class="comment">//	and to locate associated shaders in RawSources for each Program.</span>
+    <span class="comment">//	and to locate associated shaders in Sources.In for each Program.</span>
     Names []string
 
     <span class="comment">//	To be populated by the MakeProgramsFromRawSources() method.</span>
@@ -2214,7 +2214,7 @@ After using a ProgramManager, Reset() cleans up and deletes resources allocated 
 				<h3 id="ProgramManager.CloneRawSources">func (*ProgramManager) <a href="/target/program-manager.go?s=1537:1617#L30">CloneRawSources</a></h3>
 				<pre>func (me *ProgramManager) CloneRawSources(srcName, dstName string) (cloned bool)</pre>
 				<p>
-Creates copies of all RawSources with srcName as dstName, and adds dstName to me.Names.
+Creates copies of all Sources.In with srcName as dstName, and adds dstName to me.Names.
 Typical use-case: compile an existing program anew but with different #defines (likely resulting in a different binary) under a different name.
 </p>
 
@@ -2225,7 +2225,7 @@ Typical use-case: compile an existing program anew but with different #defines (
 				<h3 id="ProgramManager.MakeProgramsFromRawSources">func (*ProgramManager) <a href="/target/program-manager.go?s=2718:2837#L52">MakeProgramsFromRawSources</a></h3>
 				<pre>func (me *ProgramManager) MakeProgramsFromRawSources(forceAll bool, forceSome ...string) (dur time.Duration, err error)</pre>
 				<p>
-For each program name in me.Names: creates a new Program, compiles all Shader stages for that name in me.RawSources, and
+For each program name in me.Names: creates a new Program, compiles all Shader stages for that name in me.Sources.In, and
 links the Program with these compiled Shader stages. If successful, the Program is added to me.Programs under that name.
 If forceAll is true, a Program already existing under a name is deleted and recreated; otherwise, it is kept and not recreated.
 If forceSome has values, only those names (instead of all me.Names) are processed.
@@ -2237,10 +2237,10 @@ If an error occurs, this method returns it immediately; otherwise, dur contains 
 				
 			
 				
-				<h3 id="ProgramManager.Reset">func (*ProgramManager) <a href="/target/program-manager.go?s=4177:4210#L97">Reset</a></h3>
+				<h3 id="ProgramManager.Reset">func (*ProgramManager) <a href="/target/program-manager.go?s=4788:4821#L114">Reset</a></h3>
 				<pre>func (me *ProgramManager) Reset()</pre>
 				<p>
-Allocates/re-initializes all maps in me (Programs, Defines, RawSources) as new empty maps.
+Allocates/re-initializes all maps in me (Programs, Defines, Sources) as new empty maps.
 Also deletes all existing me.Programs (if any) from OpenGL.
 </p>
 
@@ -2250,7 +2250,7 @@ Also deletes all existing me.Programs (if any) from OpenGL.
 		
 			
 			
-			<h2 id="ProgramSources">type <a href="/target/program-manager.go?s=4643:5202#L116">ProgramSources</a></h2>
+			<h2 id="ProgramSources">type <a href="/target/program-manager.go?s=5254:5813#L133">ProgramSources</a></h2>
 			<pre>type ProgramSources struct {
     <span class="comment">//	Named shader sources for the Compute Shader stage.</span>
     Compute map[string]string
